# forge-testbench

./: .gitignore  AGENTS.md  CLAUDE.md  COPY_PASTE_PROMPTS.md  README.md
spectral/: .gitignore  AGENTS.md  BUG_REPORT.md  CLAUDE.md  README.md  SPRINT_PLAN.md  SPRINT_REQUIREMENTS.md  pyproject.toml
spectral/.claude/workflows/: wfl-fix-bug.js  wfl-run-sprint.js  wfl-run-task.js
spectral/.forge/: config.json  generation-manifest.json  init-context.json  init-context.md  project-context.json  structure-versions.json
spectral/.forge/personas/: architect.md  bug-fixer.md  collator.md  engineer.md  librarian.md  orchestrator.md  product-manager.md  qa-engineer.md  supervisor.md
spectral/.forge/schemas/: enum-catalog.json
spectral/.forge/skills/: architect-skills.md  bug-fixer-skills.md  collator-skills.md  engineer-skills.md  generic-skills.md  librarian-skills.md  qa-engineer-skills.md  store-custodian-skills.md  supervisor-skills.md
spectral/.forge/store/: COLLATION_STATE.json
spectral/.forge/templates/: CODE_REVIEW_TEMPLATE.md  COST_REPORT_TEMPLATE.md  PLAN_REVIEW_TEMPLATE.md  PLAN_TEMPLATE.md  PROGRESS_TEMPLATE.md
spectral/.forge/tools/: store-cli.cjs
spectral/.forge/workflows/: enhance.md  implement_plan.md  quiz_agent.md  update_implementation.md  validate_task.md
spectral/engineering/: MASTER_INDEX.md
spectral/engineering/architecture/: INDEX.md  database.md  deployment.md  processes.md  routing.md  stack-checklist.md  stack.md
spectral/engineering/business-domain/: INDEX.md  entity-model.md
spectral/src/spectral/: __init__.py  cli.py  engine.py  (+1 more)
(+423 files in other folders)
