[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectral"
version = "0.1.0"
description = "Mood-based ambient soundscape generator for the terminal"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "sounddevice>=0.4",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.scripts]
spectral = "spectral.cli:main"
